--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
